feat: attach image to note

--- a/app.json
+++ b/app.json
@@ -31,7 +31,14 @@
       [
         "expo-location",
         {
-          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+          "locationAlwaysAndWhenInUsePermission": "Allow this app to use your location."
+        }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you attach image in your note.",
+          "cameraPermission": "The app accesses your camera to let you attach image in your note."
         }
       ]
     ],
