--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
-    "build": "eas build --platform android"
+    "build": "eas build --platform android --profile preview"
   },
   "jest": {
     "preset": "jest-expo"
